--- a/views/materias.html
+++ b/views/materias.html
@@ -1,6 +1,6 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Comprendiendo mejor las materias</h1>
-<p>Entendemos que la definición tan simple en una sola frase para cada materia, como se definen en el mapa, pueden llegar a quedarse corto, sobre todo con materias complejas de comprender como lo son el Simpatismo o la Nominación. Así, a simple vista no queda muy claro cuales son las limitaciones y alcances de cda uno, lo que abarcan y cómo funcionan realmente. Cómo están conectadas las distintas materias y por qué hay que escoger entre simpatismo y hechicería y no se pueden cursar las dos en la academia de Narysium.</p>
+<p>Entendemos que una definición tan simple en sola una única frase para cada materia, como se definen en el mapa, puede llegar a quedarse corto, sobre todo con materias complejas de comprender como lo son el Simpatismo o la Nominación. Así, a simple vista no queda muy claro cuales son las limitaciones y alcances de cda uno, lo que abarcan y cómo funcionan realmente. Cómo están conectadas las distintas materias y por qué hay que escoger entre simpatismo y hechicería y no se pueden cursar las dos en la academia de Narysium.</p>
 <p>Primero que nada, veamos qué materias están más conectadas que otras, ya sea porque comparten la definción de algunos conceptos o ámbitos entre sí.</p>
 
 <center><img class="materiasPic" src="/assets/materias.png"></img></center>
