--- a/views/materias.html
+++ b/views/materias.html
@@ -6,8 +6,16 @@
 <center><img class="materiasPic" src="/assets/materias.png"></img></center>
 
 <div class="t2">Simpatismo</div>
-    
-
+<p>Manipula la materia a través de los vínculos inherentes en las cosas. Esto quiere decir que los magos basados en el simpatismo recurren a la energía de su entorno para realizar su magia, por eso dista de la hechicería donde se recurre a la propia energía para mutar la materia.</p>
+<p>Sin embargo, alterar la materia en ambos casos tiene un coste. Mientras los hechiceros consumen su maná interno, los simpatistas necesitan hacer un intercambio físico en las cosas. Por poner unos ejemplos:</p>
+<ul>
+    <li>Para crear una llama se ncecesitaría un brasero (o incluso el calor del propio cuerpo) cercano del que obtener el calor del mismo. Cuanta más energía tenga, más calor se podrá extraer del mismo para crear llamaradas.</li>
+    <li>Aprovechar la humedad del aire para concetrarlo en chorros de agua.</li>
+    <li>Crear ráfagas de viento usando el aire de los pulmones.</li>
+    <li>Trasladar la luz que se cuela por una grieta en una cueva para iluminar toda la estancia.</li>
+    <li>Hacer levitar cosas manipulando otras.</li>
+</ul>
+Como puedes comprobar, el límite de la Simpatía se encuentra en el entorno, si escaseas de los recursos necesarios en el entorno, por ejemplo, poca humedad, no podrás realizar simpatismo vinculado con el agua. En cuayo caso tendrías que recurrir al propio agua dde tu cuerpo, lo cual,  
  
 <%- include(`./partials/bot-part.html`) %>
 
