--- a/views/materias.html
+++ b/views/materias.html
@@ -9,7 +9,7 @@
 <p>Manipula la materia a través de los vínculos inherentes en las cosas. Esto quiere decir que los magos basados en el simpatismo recurren a la energía de su entorno para realizar su magia, por eso dista de la hechicería donde se recurre a la propia energía para mutar la materia.</p>
 <p>Sin embargo, alterar la materia en ambos casos tiene un coste. Mientras los hechiceros consumen su maná interno, los simpatistas necesitan hacer un intercambio físico en las cosas. Por poner unos ejemplos:</p>
 <ul>
-    <li>Para crear una llama se nececesitaría un brasero cercano del que obtener el calor del mismo (o incluso el calor del propio cuerpo). Cuanta más energía tenga, más calor se podrá extraer del mismo para crear llamaradas.</li>
+    <li>Para crear una llama se nececesitaría un brasero cercano del que obtener el calor (o incluso el calor del propio cuerpo). Cuanta más energía tenga, más calor se podrá extraer del mismo para crear llamaradas.</li>
     <li>Aprovechar la humedad del aire para concetrarlo en chorros de agua.</li>
     <li>Crear ráfagas de viento usando el aire de los pulmones.</li>
     <li>Trasladar la luz que se cuela por una grieta en una cueva para iluminar toda la estancia.</li>
