--- a/views/materias.html
+++ b/views/materias.html
@@ -15,7 +15,7 @@
     <li>Trasladar la luz que se cuela por una grieta en una cueva para iluminar toda la estancia.</li>
     <li>Hacer levitar cosas manipulando otras.</li>
 </ul>
-Como puedes comprobar, el límite de la Simpatía se encuentra en el entorno, si escaseas de los recursos necesarios en el entorno, por ejemplo, poca humedad, no podrás realizar simpatismo vinculado con el agua. En cuayo caso tendrías que recurrir al propio agua dde tu cuerpo, lo cual,  
+Como puedes comprobar, el límite de la Simpatía se encuentra en el entorno, si escaseas de los recursos necesarios en el entorno, por ejemplo, poca humedad, no podrás realizar simpatismo vinculado con el agua. En cuayo caso tendrías que recurrir al propio agua dde tu cuerpo. No obstante, date cuenta que del mismo modo que los recursos en el ambiente se consumen para ese intercmbio de energía lo mismo pasa con los recursos del propio cuerpo, por lo que estos casos suelen ser la última baza. Gastar toda la humedad del cuerpo puede llegar a matar a su usuario por deshidratación, gastar tu calor te hará sufrir hipotermia, gastar el aire de tus pulmones, asfixia.   
  
 <%- include(`./partials/bot-part.html`) %>
 
