--- a/views/ficha.html
+++ b/views/ficha.html
@@ -1,5 +1,13 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Creando al personaje</h1>
+<div class="t2">Amparo</div><br>
+<p>El amparo define el vínculo con alguno de los 4 centinelas: El aventurero, el crítico, el sutil o el observador.</p>
+<p>El rector parece ser capaz de detectar la elección de estos centinelas hicieron en cada persona de Narysium y es por ello que ha hecho una clasificación de sus estudiantes en 4 clanes: Zanark, Orion, Cetus y Eridan.</p>
+<p>Desde hace un tiempo, el rector ha perdido facultades para detectar ese vínculo y acabó considerando que los nuevos integrantes a la academia comenzarían su primer periodo sin un clan específico. Estos son los designados como Ignotos.</p>
+
+<p>Una vez acabada la ficha y sea revisada por la administración, les daremos a elegir una serie de atributos de entre una lista: Esto determinará el vínculo con alguno de los 4 centinelas, aunque el primer mes se permanezca sin un clan, siendo un Ignoto.</p>
+<p>En la academia de Naryisum no se tolera la vagueza, ni que la gente venga buscando un sitio donde hospedarse de forma gratuita, por ello, aquellos que no asistan a ninguna clase o no se les vea el pelo por los alrededores de la academia por mucho tiempo acabarán siendo desvinculados de su clan y designados como Ignotos.</p>
+
 <div class="t2">La ficha</div><br>
 Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo para ser aceptada. Sin embargo siempre puedes añadir más información de la indicada, ya sea raza, orientación sexual, etc, eso ya depende de cada quién.
 <br><br><b>— Nombre y Edad</b>
@@ -8,13 +16,6 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 <br><b>— Troncal</b>: Elegir entre asginatura de simpatismo o asignatura de hechicería (explicados en el mapa)
 <br><b>— Materias favoritas</b>: (Sólo si eres alumno) Escoger 4. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
 
-<br><b>— Amparo</b>: El espíritu protector asignado. Como desarrollar la personalidad en la ficha es opcional, puedes hacer dos cosas:
-<ul>
-    <li>Desarrollar la personalidad y en base a ella la administración decidimos cual es el espíritu (y por tanto el clan) asignado.</li>
-    <li>O mandarnos por MD a la administración <b>2</b> preferencias de tu espíritu protector, y de una de esas dos la administración escogería</li>
-</ul>
-<i>Estas dos elecciones no son excluyentes, aunque tengas desarrollada la personalidad puedes mandarnos dos preferencias si así lo deseas. Recuerda que el clan correspondiente a cada espíritu guardián están descritos en el mapa.</i>
-
 <!--<ul>
     <li>El aventurero (Zanark)</li>
     <li>El crítico (Orion)</li>
@@ -22,7 +23,6 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
     <li>El observador (Eridan)</li>
 </ul>-->
 <br><br>
-
 
 <br><br><b>— Virtudes</b>: Aquello en lo que brillan, tanto en personalidad como en habilidades. 
 <br><b>— Defectos</b>: No abusar de defectos en la personalidad, incluir debilidades o campos que no manejen del todo bien 
