--- a/views/ficha.html
+++ b/views/ficha.html
@@ -4,9 +4,10 @@
 <p>El amparo define el vínculo con alguno de los 4 centinelas: El aventurero, el crítico, el sutil o el observador.</p>
 <p>El rector parece ser capaz de detectar la elección de estos centinelas hicieron en cada persona de Narysium y es por ello que ha hecho una clasificación de sus estudiantes en 4 clanes: Zanark, Orion, Cetus y Eridan.</p>
 <p>Desde hace un tiempo, el rector ha perdido facultades para detectar ese vínculo y acabó considerando que los nuevos integrantes a la academia comenzarían su primer periodo sin un clan específico. Estos son los designados como Ignotos.</p>
-
+<center>❃ ❃ ❃</center>
 <p>Una vez acabada la ficha y sea revisada por la administración, les daremos a elegir una serie de atributos de entre una lista: Esto determinará el vínculo con alguno de los 4 centinelas, aunque el primer mes se permanezca sin un clan, siendo un Ignoto.</p>
 <p>En la academia de Naryisum no se tolera la vagueza, ni que la gente venga buscando un sitio donde hospedarse de forma gratuita, por ello, aquellos que no asistan a ninguna clase o no se les vea el pelo por los alrededores de la academia por mucho tiempo acabarán siendo desvinculados de su clan y designados como Ignotos.</p>
+<p>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para los casos en los que varíe, que no será frecuente, pero será mejor para ustedes.</p>
 
 <div class="t2">La ficha</div><br>
 Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo para ser aceptada. Sin embargo siempre puedes añadir más información de la indicada, ya sea raza, orientación sexual, etc, eso ya depende de cada quién.
