--- a/views/ficha.html
+++ b/views/ficha.html
@@ -5,10 +5,12 @@
     <p>El rector parece ser capaz de detectar la elección de estos centinelas hicieron en cada persona de Narysium y es por ello que ha hecho una clasificación de sus estudiantes en <b>4 clanes: Zanark, Orion, Cetus y Eridan.</b></p>
 <p>Desde hace un tiempo, el rector ha perdido facultades para detectar ese vínculo y acabó considerando que los nuevos integrantes a la academia comenzarían su primer periodo <b>sin un clan específico.</b> Estos son los designados como <b>Ignotos.</b></p>
 <p><center>❃ ❃ ❃</center></p>
-<p>Una vez acabada la ficha y sea revisada por la administración, <b>les daremos a elegir una serie de atributos de entre una lista: Esto determinará el vínculo</b> con alguno de los 4 centinelas, aunque el primer mes se permanezca sin un clan, siendo un Ignoto.</p>
-<p>En la academia de Naryisum no se tolera la vagueza, ni que la gente venga buscando un sitio donde hospedarse de forma gratuita, por ello, aquellos que no asistan a ninguna clase o no se les vea el pelo por los alrededores de la academia por mucho tiempo acabarán siendo desvinculados de su clan y designados como Ignotos.</p>
-<p>Los ignotos. Además de disponer una habitación cutre para su dormitorio, no tienen una sala común.</p>
-<p>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para los casos en los que varíe, que no será frecuente, pero será mejor para ustedes.</p>
+<br><br><b>— Selección de atributos</b> Una vez acabada la ficha y sea revisada por el staff, tendrán que elegir una serie de atributos de una lista que les pasaremos por mensajería privada.
+<br><br><b>— Integración</b> Los nuevos alumnos/profesores que ingresen a la academia de Narysium formarán parte de los Ignotos el primer mes, pudiendose alargar si hay un desbalance en los clanes, en cuyo caso irán entrando en los clanes por orden de prioridad.
+<br><br><b>— Pasividad</b> Aquellos miembros que no parezcan por los alrededores de la academia y no participen en ninguna clase en mucho tiempo serán desvinculados de un clan para pasar a ser Ignoto.
+<br><br><b>— Ignotos</b> No tienen sala común, sus dormitorios son <a href="/dormitorios">habitaciones cutres</a> están dispuestos en la planta subsuelo 1, repartidos en un largo pasillo.
+
+<p>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para cuando éste varíe, que no será frecuente pues el amparo normalmente se va a mantener, pero será mejor para ustedes.</p>
 
 <div class="t2">La ficha</div><br>
 Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo para ser aceptada. Sin embargo siempre puedes añadir más información de la indicada, ya sea raza, orientación sexual, etc, eso ya depende de cada quién.
