--- a/views/ficha.html
+++ b/views/ficha.html
@@ -2,13 +2,15 @@
 <h1>Creando al personaje</h1>
 <div class="t2">Amparo</div><br>
 <p>El amparo define el vínculo con alguno de <b>los 4 centinelas: El aventurero, el crítico, el sutil o el observador.</b></p>
-    <p>El rector parece ser capaz de detectar la elección de estos centinelas hicieron en cada persona de Narysium y es por ello que ha hecho una clasificación de sus estudiantes en <b>4 clanes: Zanark, Orion, Cetus y Eridan.</b></p>
+<p>El rector parece ser capaz de detectar la elección de estos centinelas hicieron en cada persona de Narysium y es por ello que ha hecho una clasificación de sus estudiantes en <b>4 clanes: Zanark, Orion, Cetus y Eridan.</b></p>
 <p>Desde hace un tiempo, el rector ha perdido facultades para detectar ese vínculo y acabó considerando que los nuevos integrantes a la academia comenzarían su primer periodo <b>sin un clan específico.</b> Estos son los designados como <b>Ignotos.</b></p>
-<p><center>❃ ❃ ❃</center></p>
-<br><b>— Selección de atributos</b> Una vez acabada la ficha y sea revisada por el staff, tendrán que elegir una serie de atributos de una lista que les pasaremos por mensajería privada.
-<br><br><b>— Integración</b> Los nuevos alumnos/profesores que ingresen a la academia de Narysium formarán parte de los Ignotos el primer mes, pudiendose alargar si hay un desbalance en los clanes, en cuyo caso irán entrando en los clanes por orden de prioridad.
-<br><br><b>— Pasividad</b> Aquellos miembros que no parezcan por los alrededores de la academia y no participen en ninguna clase en mucho tiempo serán desvinculados de un clan para pasar a ser Ignoto.
-<br><br><b>— Ignotos</b> No tienen sala común, sus dormitorios son <a href="/dormitorios">habitaciones cutres</a> están dispuestos en la planta subsuelo 1, repartidos en un largo pasillo.
+<br>
+<center>❃ ❃ ❃</center>
+<br>
+<br><b>— Selección de atributos</b>: Una vez acabada la ficha y sea revisada por el staff, tendrán que elegir una serie de atributos de una lista que les pasaremos por mensajería privada.
+<br><br><b>— Integración</b>: Los nuevos alumnos/profesores que ingresen a la academia de Narysium formarán parte de los Ignotos el primer mes, pudiéndose alargar si hay un desbalance en los clanes, en cuyo caso irán entrando en los clanes por orden de prioridad.
+<br><br><b>— Pasividad</b>: Aquellos miembros que no parezcan por los alrededores de la academia y no participen en ninguna clase en mucho tiempo serán desvinculados de un clan para pasar a ser Ignoto.
+<br><br><b>— Ignotos</b>: No tienen sala común, sus dormitorios son <a href="/dormitorios">habitaciones cutres</a> están dispuestos en la planta subsuelo 1, repartidos en un largo pasillo.
 
 <br><p>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para cuando éste varíe, que no será frecuente pues el amparo normalmente se va a mantener, pero será mejor para ustedes.</p>
 
