--- a/views/ficha.html
+++ b/views/ficha.html
@@ -1,6 +1,11 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Creando al personaje</h1>
-<div class="t2">Amparo</div><br>
+<div class="t2">Censo</div>
+Para tener una variedad dentro del fake controlamos que si existen muchos integrantes de un arqutipo no se abuse de este, por ello abrimos o cerramos rangos y clanes dependiendo de como esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, pero si que iremos cambiando más a menudo el tema de los rangos.
+<br><br>
+<center><a href="https://docs.google.com/document/d/1RysqIqJYUT2qoFJD90A-DSgoXLhAwEYn1SvlXrFVXaQ/edit?usp=sharing"><div class="button">Cupos</div></a></center><br>
+
+<div class="t2">Amparo</div>
 <p>El amparo define el vínculo con alguno de <b>los 4 centinelas: El aventurero, el crítico, el sutil o el observador.</b></p>
 <p>El rector parece ser capaz de detectar la elección de estos centinelas hicieron en cada persona de Narysium y es por ello que ha hecho una clasificación de sus estudiantes en <b>4 clanes: Zanark, Orion, Cetus y Eridan.</b></p>
 <p>Desde hace un tiempo, el rector ha perdido facultades para detectar ese vínculo y acabó considerando que los nuevos integrantes a la academia comenzarían su primer periodo <b>sin un clan específico.</b> Estos son los designados como <b>Ignotos.</b></p>
@@ -14,7 +19,7 @@
 
 <br><br><p>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para cuando éste varíe, que no será frecuente pues el amparo normalmente se va a mantener, pero será mejor para ustedes.</p>
 
-<div class="t2">La ficha</div><br>
+<div class="t2">La ficha</div>
 Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo para ser aceptada. Sin embargo siempre puedes añadir más información de la indicada, ya sea raza, orientación sexual, etc, eso ya depende de cada quién.
 <br><br><b>— Nombre y Edad</b>
 <br><b>— Origen</b>: De otro mundo o de alguna región de Nerysium. 
@@ -34,11 +39,6 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 
 <br><br>
 <i>Aunque estas dos últimas sean opcionales es recomendable que tengas planteado incluirlas a la larga para conectar tu personaje mejor con la ambientación.</i>
-
-<div class="t2">Censo</div><br>
-Para tener una variedad dentro del fake controlamos que si existen muchos integrantes de un arqutipo no se abuse de este, por ello abrimos o cerramos rangos y clanes dependiendo de como esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, pero si que iremos cambiando más a menudo el tema de los rangos.
-<br><br>
-<center><a href="https://docs.google.com/document/d/1RysqIqJYUT2qoFJD90A-DSgoXLhAwEYn1SvlXrFVXaQ/edit?usp=sharing"><div class="button">Censo</div></a></center><br>
 
 <%- include(`./partials/bot-part.html`) %>
 
