--- a/views/ficha.html
+++ b/views/ficha.html
@@ -1,6 +1,6 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Creando al personaje</h1>
-<div class="t2">Censo</div>
+<div class="t2">Cupos</div>
 Para tener una variedad dentro del fake controlamos que si existen muchos integrantes de un arqutipo no se abuse de este, por ello abrimos o cerramos rangos y clanes dependiendo de como esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, pero si que iremos cambiando más a menudo el tema de los rangos.
 <br><br>
 <center><a href="https://docs.google.com/document/d/1RysqIqJYUT2qoFJD90A-DSgoXLhAwEYn1SvlXrFVXaQ/edit?usp=sharing"><div class="button">Cupos</div></a></center><br>
@@ -9,9 +9,9 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 <p>El amparo define el vínculo con alguno de <b>los 4 centinelas: El aventurero, el crítico, el sutil o el observador.</b></p>
 <p>El rector parece ser capaz de detectar la elección de estos centinelas hicieron en cada persona de Narysium y es por ello que ha hecho una clasificación de sus estudiantes en <b>4 clanes: Zanark, Orion, Cetus y Eridan.</b></p>
 <p>Desde hace un tiempo, el rector ha perdido facultades para detectar ese vínculo y acabó considerando que los nuevos integrantes a la academia comenzarían su primer periodo <b>sin un clan específico.</b> Estos son los designados como <b>Ignotos.</b></p>
-<br><br>
+<br>
 <center>❃ ❃ ❃</center>
-<br><br>
+<br>
 <br><b>— Selección de atributos</b>: Una vez acabada la ficha y sea revisada por el staff, tendrán que elegir una serie de atributos de una lista que les pasaremos por mensajería privada.
 <br><br><b>— Integración</b>: Los nuevos alumnos/profesores que ingresen a la academia de Narysium formarán parte de los Ignotos el primer mes, pudiéndose alargar si hay un desbalance en los clanes, en cuyo caso irán entrando en los clanes por orden de prioridad.
 <br><br><b>— Pasividad</b>: Aquellos miembros que no parezcan por los alrededores de la academia y no participen en ninguna clase en mucho tiempo serán desvinculados de un clan para pasar a ser Ignoto.
@@ -24,9 +24,8 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 <br><br><b>— Nombre y Edad</b>
 <br><b>— Origen</b>: De otro mundo o de alguna región de Nerysium. 
 <br><b>— Rango</b>: Tu rango de maestría dentro de la academia. Si eres profesor especificar materia que imparte <br>
-<br><b>— Troncal</b>: Elegir entre asginatura de simpatismo o asignatura de hechicería (explicados en el mapa)
-<br><b>— Materias favoritas</b>: (Sólo si eres alumno) Escoger 4. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
-<br><br>
+<br><b>— Troncal</b>: Elegir entre asginatura de <a href="/materias">simpatismo</a> o <a href="/materias">hechicería</a>.
+<br><b>— Materias favoritas (Sólo si eres alumno)</b>: Escoger 4. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
 
 <br><br><b>— Virtudes</b>: Aquello en lo que brillan, tanto en personalidad como en habilidades. 
 <br><b>— Defectos</b>: No abusar de defectos en la personalidad, incluir debilidades o campos que no manejen del todo bien 
