--- a/public/less/main.less
+++ b/public/less/main.less
@@ -227,6 +227,12 @@ b, strong {
     overflow-y: hidden;
 }
 
+p a {
+    color: #325a86!important;
+    text-decoration: none;
+    font-weight: bold;
+}
+
 /* fonts */
 @import url('https://fonts.googleapis.com/css2?family=Biryani:wght@900&family=Gentium+Book+Basic&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
