--- a/views/ficha.html
+++ b/views/ficha.html
@@ -11,15 +11,19 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 <p>Desde hace un tiempo, el rector ha perdido facultades para detectar ese vínculo y acabó considerando que los nuevos integrantes a la academia comenzarían su primer periodo <b>sin un clan específico.</b> Estos son los designados como <b>Ignotos.</b></p>
 <br>
 <center>❃ ❃ ❃</center>
-<br>
+<p>
 <br><b>— Selección de atributos</b>: Una vez acabada la ficha y sea revisada por el staff, tendrán que elegir una serie de atributos de una lista que les pasaremos por mensajería privada.
 <br><br><b>— Integración</b>: Los nuevos alumnos/profesores que ingresen a la academia de Narysium formarán parte de los Ignotos el primer mes, pudiéndose alargar si hay un desbalance en los clanes, en cuyo caso irán entrando en los clanes por orden de prioridad.
 <br><br><b>— Pasividad</b>: Aquellos miembros que no parezcan por los alrededores de la academia y no participen en ninguna clase en mucho tiempo serán desvinculados de un clan para pasar a ser Ignoto.
 <br><br><b>— Ignotos</b>: No tienen sala común, sus dormitorios son <a href="/dormitorios">habitaciones cutres</a> están dispuestos en la planta subsuelo 1, repartidos en un largo pasillo.
 
-<br><br><p>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para cuando éste varíe, que no será frecuente pues el amparo normalmente se va a mantener, pero será mejor para ustedes.</p>
+<br><p><i>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para cuando éste varíe, que no será frecuente pues el amparo normalmente se va a mantener, pero será mejor para ustedes.</i></p>
+
+</p>
 
 <div class="t2">La ficha</div>
+<p>
+
 Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo para ser aceptada. Sin embargo siempre puedes añadir más información de la indicada, ya sea raza, orientación sexual, etc, eso ya depende de cada quién.
 <br><br><b>— Nombre y Edad</b>
 <br><b>— Origen</b>: De otro mundo o de alguna región de Nerysium. 
@@ -38,6 +42,8 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 
 <br><br>
 <i>Aunque estas dos últimas sean opcionales es recomendable que tengas planteado incluirlas a la larga para conectar tu personaje mejor con la ambientación.</i>
+
+</p>
 
 <%- include(`./partials/bot-part.html`) %>
 
