--- a/views/ficha.html
+++ b/views/ficha.html
@@ -17,7 +17,7 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 <br><br><b>— Pasividad</b>: Aquellos miembros que no parezcan por los alrededores de la academia y no participen en ninguna clase en mucho tiempo serán desvinculados de un clan para pasar a ser Ignoto.
 <br><br><b>— Ignotos</b>: No tienen sala común, sus dormitorios son <a href="/dormitorios">habitaciones cutres</a> están dispuestos en la planta subsuelo 1, repartidos en un largo pasillo.
 
-<br><p><i>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para cuando éste varíe, que no será frecuente pues el amparo normalmente se va a mantener, pero será mejor para ustedes.</i></p>
+<br><p><i>No necesitan poner el amparo en la ficha. De hecho, más bien se les recomienda ponerlo en alguna parte del perfil que pueda ser editado de forma cómoda para cuando éste varíe, que no será frecuente pues el vínculo del amparo <i>normalmente</i> se va a mantener el mismo aunque se esté sin clan, pero será mejor para ustedes.</i></p>
 
 </p>
 
@@ -26,7 +26,7 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 
 Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo para ser aceptada. Sin embargo siempre puedes añadir más información de la indicada, ya sea raza, orientación sexual, etc, eso ya depende de cada quién.
 <br><br><b>— Nombre y Edad</b>
-<br><b>— Origen</b>: De otro mundo o de alguna región de Nerysium. 
+<br><b>— Origen</b>: De otro mundo o de alguna región de Narysium. 
 <br><b>— Rango</b>: Tu rango de maestría dentro de la academia. Si eres profesor especificar materia que imparte <br>
 <br><b>— Troncal</b>: Elegir entre asginatura de <a href="/materias">simpatismo</a> o <a href="/materias">hechicería</a>.
 <br><b>— Materias favoritas (Sólo si eres alumno)</b>: Escoger 4. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
