--- a/views/materias.html
+++ b/views/materias.html
@@ -1,6 +1,6 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Comprendiendo mejor las materias</h1>
-<p>Entendemos que una definición tan simple en sola una única frase para cada materia, como se definen en el mapa, puede llegar a quedarse corto, sobre todo con materias complejas de comprender como lo son el Simpatismo o la Nominación. Así, a simple vista no queda muy claro cuales son las limitaciones y alcances de cda uno, lo que abarcan y cómo funcionan realmente. Cómo están conectadas las distintas materias y por qué hay que escoger entre simpatismo y hechicería y no se pueden cursar las dos en la academia de Narysium.</p>
+<p>Entendemos que una definición tan simple en sola una única frase para cada materia, como se definen en el mapa, puede llegar a quedarse corto, sobre todo con materias complejas de comprender como lo son el Simpatismo o la Nominación. Así, a simple vista no queda muy claro cuales son las limitaciones y alcances de cada una, lo que abarcan y cómo funcionan realmente. Cómo están conectadas las distintas materias y por qué hay que escoger entre simpatismo y hechicería y no se pueden cursar las dos en la academia de Narysium.</p>
 <p>Primero que nada, veamos qué materias están más conectadas que otras, ya sea porque comparten la definción de algunos conceptos o ámbitos entre sí.</p>
 
 <center><img class="materiasPic" src="/assets/materias.png"></img></center>
@@ -15,7 +15,15 @@
     <li>Trasladar la luz que se cuela por una grieta en una cueva para iluminar toda la estancia.</li>
     <li>Hacer levitar cosas manipulando otras.</li>
 </ul>
-Como puedes comprobar, el límite de la Simpatía se encuentra en el entorno, si escaseas de los recursos necesarios en el entorno, por ejemplo, poca humedad, no podrás realizar simpatismo vinculado con el agua. En cuayo caso tendrías que recurrir al propio agua dde tu cuerpo. No obstante, date cuenta que del mismo modo que los recursos en el ambiente se consumen para ese intercmbio de energía lo mismo pasa con los recursos del propio cuerpo, por lo que estos casos suelen ser la última baza. Gastar toda la humedad del cuerpo puede llegar a matar a su usuario por deshidratación, gastar tu calor te hará sufrir hipotermia, gastar el aire de tus pulmones, asfixia.   
- 
+<p>Como puedes comprobar, el límite de la Simpatía se encuentra en el entorno, si escaseas de los recursos necesarios en el entorno, por ejemplo, poca humedad, no podrás realizar simpatismo vinculado con el agua. En cuyo caso tendrías que recurrir al propio agua de tu cuerpo.</p>
+
+<p>No obstante, date cuenta que del mismo modo que los recursos en el ambiente se consumen para ese intercmbio de energía lo mismo pasa con los recursos del propio cuerpo, por lo que estos casos suelen ser la última baza. Gastar toda la humedad del cuerpo puede llegar a matar a su usuario por deshidratación, gastar tu calor te hará sufrir hipotermia, gastar el aire de tus pulmones, asfixia.   </p>
+
+<div class="t2">Hechicería</div>
+<p>Menos difícil de comprender que el simpatismo, pero más dificil de dominar en la práctica. Un simpatista no requiere concentración a la hora de establecer sus vínculos en los intercambios de energía, pudiendo realizar vínculos simpáticos (conjuros en hechicería) al mismo tiempo que se utilizan otras habilidades físicas, sin embargo, los hechiceros necesitan una alta concentración para mantener sus hechizos o encantamientos. Es por ellos que aquellos entregados al combate físico casi siempre se decantan por una combinación con el simpatismo, mientras que los hechiceros son más dados a la erudición, aunque no necesariamente siempre tenga que ser así.</p>
+<p>Un hechicero para conjurar su magia utiliza un recurso interno al que se denomina como el maná. Un recurso, que como la energía que maneja el simpatismo, no es infinito y puede llegar a consumirse. Tienen más facil alteral los elementos en distintos medios como crear lluvias en mitad de una sequía, congelar cortinas de fuego, lanzar bolas de fuego en mitad de Ul'gurd. Sin embargo, el riesgo que supone gastar ese maná es más peligroso que en el simpatismo.</p>
+<p>Gastar el maná, agota. Es como hacer ejercicio, y es la razón por la que agota el doble cuando se junta Maref y conjuros. Sólo los hechiceros más poderosos son capacer mantenerse inalterables.</p>
+<p>Gastar el maná, agota. Es como hacer ejercicio, y es la razón por la que agota el doble cuando se junta Maref y conjuros. Sólo los hechiceros más poderosos son capacer mantenerse inalterables.</p>
+
 <%- include(`./partials/bot-part.html`) %>
 
