--- a/views/materias.html
+++ b/views/materias.html
@@ -26,5 +26,12 @@
 <p>Una vez va llegado al límite del maná se va perdiendo consciencia de sí mismo, pudiendo llegar a la muerte. Quienes se acercan demasiado al límite en ocasiones sufren impedimentos crónicos en su sistema motriz, en el habla, pudiendo llegar incluso a afectar el intelecto.</p>
 
 <p><i>Los hechiceros al igual que los simpatistas pueden usar contendores de magia para suplir sus límites: El simpatismo guarda la energía que necesita (focos de calor concentrado, focos de agua, etc) y el hechicero guarda el maná que necesite. Sin embargo requieren de la rama de runología para poder hacer dichos contendores.</i></p>
+
+<div class="t2">Nominación</div>
+<p>Cuando conoces el nombre de las cosas, el manejo de la magia, la capacidad de moldear el mundo a tu antojo es infinito, manipular la materia no te exije un coste a cambio, sus usuarios le ordenan al mundo y el mundo obedece. Conocer tambien el nombre oculto de las personas te da poder sobre ellos, tanto que hasta el mentalismo se queda corto. </p>
+<p>Sin embargo, encontrar los nombres de las cosas en aprender palabras, consiste más bien en la concepción completa de una entidad. Si por ejemplo quisieramos conocer el nombre de una piedra de la calle habría que saber absolutamente todo sobre ella, perciir todas sus perspectivas al mismo tiempo, cuanto pesa, de qué está compuesta, cuanto tardaría en caer desde cierta altura, cual es su reaccion con los distintos elementos, entre muchas más cosas que escapan a la comprensión, es lo que configura el nombre de esa única piedra de la calle.</p>
+<p>Ahora imagina intentar comprender el nombre del mar, una tarea costosa a la que muchos han entregado casi toda su vida para descubrirlo y muchos han fracasado. Y es que, quien halla los nombres de las cosas no es la mente lógica, la mente pensante, sino algo que subyace la misma la cual llaman la mente dormida.</p>
+<p>La mente dormida normalmente sale a flote cuando aflora un sentimiento muy fuerte, como una ira incontenida en un momento muy concreto, o un júbilo como nunca antes sentido.</p>
+
 <%- include(`./partials/bot-part.html`) %>
 
