--- a/views/materias.html
+++ b/views/materias.html
@@ -24,6 +24,7 @@
 <p>Para conjurar su magia, los hechiceros utilizan un recurso interno denominado "maná". Un recurso que, como la energía que maneja el simpatismo, no es infinito y puede llegar a consumirse. Tienen más fácil la labor de alterar los elementos en distintos medios como: Crear lluvias en mitad de una sequía, congelar cortinas de fuego sin pensar en disipar el calor como lo haría el simpatista, crear bolas de fuego en mitad de Ul'gurd. Sin embargo, el riesgo que supone gastar ese maná es más peligroso que en el simpatismo.</p>
 <p>Gastar el maná, agota. Es como hacer ejercicio, y es la razón por la que agota el doble cuando se junta Maref y conjuros. Sólo los hechiceros más poderosos son capacer mantenerse inalterables.</p>
 <p>Una vez va llegado al límite del maná se va perdiendo consciencia de sí mismo, pudiendo llegar a la muerte. Quienes se acercan demasiado al límite en ocasiones sufren impedimentos crónicos en su sistema motriz, en el habla, pudiendo llegar incluso a afectar el intelecto.</p>
+<p>Otra diferencia con el simpatismo es que los conjuros deben ser invocados con palabras. Mentalmente o habladas. Pueden ser en lenguaje natural, pero los conjuros más fuertes son aquellos pronunciados en lenguajes antiguos o compuestos por una formulación de palabras concreta.</p>
 
 <p><i>Los hechiceros al igual que los simpatistas pueden usar contendores de magia para suplir sus límites: El simpatismo guarda la energía que necesita (focos de calor concentrado, focos de agua, etc) y el hechicero guarda el maná que necesite. Sin embargo requieren de la rama de runología para poder hacer dichos contendores.</i></p>
 
@@ -33,7 +34,7 @@
 <p>Ahora imagina intentar comprender el nombre del mar, una tarea costosa a la que muchos han entregado casi toda su vida para descubrirlo y muchos han fracasado. Y es que, quien halla los nombres de las cosas no es la mente lógica, la mente pensante; Sino algo que subyace la misma, la cual llaman la mente dormida.</p>
 <p>Por si eso fuera poco, el nombre de algo tan complejo como el nombre de la piedra o el nombre del fuego, son nombres que nunca permanecen iguales de un día para otro, pero es la mente dormida la que sabe, una vez te acerca a uno de ellos, cual es el nombre actual de aquella cosa con la que ha tenido contacto.</p>
 <p>La mente dormida normalmente sale a flote cuando aflora un sentimiento muy fuerte, como una ira incontenida en un momento muy concreto, o un júbilo como nunca antes sentido.</p>
-<p>Una vez toma consciencia, pueden pasar dos cosas, o la persona se vuelve loca de forma irreversible, o cosigue dominar el nombre que ha hecho despertar la mente dormida.</p>
+<p>Una vez toma consciencia, pueden pasar dos cosas: O la persona se vuelve loca de forma irreversible, o cosigue dominar el nombre que ha hecho despertar la mente dormida.</p>
 
 <%- include(`./partials/bot-part.html`) %>
 
