--- a/views/materias.html
+++ b/views/materias.html
@@ -36,5 +36,9 @@
 <p>La mente dormida normalmente sale a flote cuando aflora un sentimiento muy fuerte, como una ira incontenida en un momento muy concreto, o un júbilo como nunca antes sentido.</p>
 <p>Una vez toma consciencia, pueden pasar dos cosas: O la persona se vuelve loca de forma irreversible, o cosigue dominar el nombre que ha hecho despertar la mente dormida.</p>
 
+<div class="t2">Historia</div>
+<p>Narra los acontecimientos pasados sucedidos en Narysium. Guerras, disputas, políticas de los distintos lugares. Habla de la historia de los centinelas, aunque poco se conozca. De la vida en las distintas ciudades, de sus costumbres sus habitantes y sus cultos.</p>
+
+
 <%- include(`./partials/bot-part.html`) %>
 
