--- a/views/materias.html
+++ b/views/materias.html
@@ -37,7 +37,21 @@
 <p>Una vez toma consciencia, pueden pasar dos cosas: O la persona se vuelve loca de forma irreversible, o cosigue dominar el nombre que ha hecho despertar la mente dormida.</p>
 
 <div class="t2">Historia</div>
-<p>Narra los acontecimientos pasados sucedidos en Narysium. Guerras, disputas, políticas de los distintos lugares. Habla de la historia de los centinelas, aunque poco se conozca. De la vida en las distintas ciudades, de sus costumbres sus habitantes y sus cultos.</p>
+<p>Narra los acontecimientos pasados sucedidos en Narysium: Guerras, disputas, políticas de los distintos lugares. Habla de la historia de los centinelas, aunque poco se conozca. De la vida en las distintas ciudades, de sus costumbres sus habitantes y sus cultos.</p>
+
+<div class="t2">Maref</div>
+<p>Existen muchas vías para dominar Maref. Es un ámbito muy grande que abarca desde tonificar el cuerpo hasta aprender las distintas vías de combate de las que se compone. Ayudan a dosificar eficientemente el maná interno para la hechicería, así como a dividir la mente sin perder la concentración, y cómo aprender a apoyarse en el simpatismo como auxiliar para el combate físico.</p>
+<p>Las vías de adiestramiento para entrenar las cualidades de Maref son innumerables, mas abarcan tanto las desarrolladas en Narysium como las que están fuera del mundo. Desde artes marciales, hasta estilos de combate con armas como la esgrima, el kendo, etc. Se incluyen las formas de combate arcaicas:</p> 
+<ul>
+    <li>Shii-Cho</li>: La primera forma de combate enseñada a los iniciados en cualquiera de las vías de Maref. Es versátil, pues mantiene un equlibrio en la defensa y en el ataque, está enfocada contra adversarios humanoides: Ataques a flanco izquierdo, flanco derecho, cabeza y piernas.
+    <li>Makashi</li>: La forma predilecta cuando el adversario utiliza el mismo arte de combate. Es un estilo de cobate elegantes, precisos, sosegado y paciente.
+    <li>Soresu</li>: Es la forma más defensiva de todas, es la forma que se adopta en combate cuando se detecta en el adversario un estilo de combate agresivo o desventaja de rango. Requiere de mayores reflejos y aprovecha los errores rivales para atacar.
+    <li>Ataru</li>: La forma agresiva,  veloz y efectiva contra oponentes únicos, pero era débil en combate prolongado y espacios confinados. Destaca por sus acrobacias asistidas por a fuerza cona atques poderosos.
+    <li>Shiem/Djen So</li> Para desempeñarlo es necesario ser capaz de ver a través del tercer ojo a tu oponente y poder aplicar la forma Makashi y Soresu en conjunto. Sin la ayuda del tercer ojo esta forma es inútil.
+    <li>Niaman</li>: La forma híbrida, combina todas las formas anteriores, pero sólo es capaz de funcionar si se domina todas y cada una de ellas a la perfección.
+    <li>Juyo/Vaapad</li>: La forma feroz del Maref. Además de combinar las anteriores formas, no busca vencer a su oponente sino destruiro en un "todo vale". Es la técnica más peligrosa de todas, la que todo maestro de Maref sólo utiliza en momentos desesperados.
+</ul>
+<p>Aunque todas las vías de Maref enseñan de distinta manera tienen un foco comun: Utilizar el tercer ojo para dejarse llevar por una persepción trascendental y predecir las acciones de los oponentes.</p>
 
 
 <%- include(`./partials/bot-part.html`) %>
