--- a/views/materias.html
+++ b/views/materias.html
@@ -42,6 +42,7 @@
 <div class="t2">Maref</div>
 <p>Existen muchas vías para dominar Maref. Es un ámbito muy grande que abarca desde tonificar el cuerpo hasta aprender las distintas vías de combate de las que se compone. Ayudan a dosificar eficientemente el maná interno para la hechicería, así como a dividir la mente sin perder la concentración, y cómo aprender a apoyarse en el simpatismo como auxiliar para el combate físico.</p>
 <p>Las vías de adiestramiento para entrenar las cualidades de Maref son innumerables, mas abarcan tanto las desarrolladas en Narysium como las que están fuera del mundo. Desde artes marciales, hasta estilos de combate con armas como la esgrima, el kendo, etc. Se incluyen las formas de combate arcaicas:</p> 
+<p>Aunque todas las vías de Maref enseñan de distinta manera tienen un foco comun: Utilizar el tercer ojo para dejarse llevar por una persepción trascendental y predecir las acciones de los oponentes.</p>
 <ul>
     <li>Shii-Cho</li>: La primera forma de combate enseñada a los iniciados en cualquiera de las vías de Maref. Es versátil, pues mantiene un equlibrio en la defensa y en el ataque, está enfocada contra adversarios humanoides: Ataques a flanco izquierdo, flanco derecho, cabeza y piernas.
     <li>Makashi</li>: La forma predilecta cuando el adversario utiliza el mismo arte de combate. Es un estilo de cobate elegantes, precisos, sosegado y paciente.
@@ -51,8 +52,7 @@
     <li>Niaman</li>: La forma híbrida, combina todas las formas anteriores, pero sólo es capaz de funcionar si se domina todas y cada una de ellas a la perfección.
     <li>Juyo/Vaapad</li>: La forma feroz del Maref. Además de combinar las anteriores formas, no busca vencer a su oponente sino destruiro en un "todo vale". Es la técnica más peligrosa de todas, la que todo maestro de Maref sólo utiliza en momentos desesperados.
 </ul>
-<p>Aunque todas las vías de Maref enseñan de distinta manera tienen un foco comun: Utilizar el tercer ojo para dejarse llevar por una persepción trascendental y predecir las acciones de los oponentes.</p>
-
+<p>En la parte de adiestramiento para tonificar el cuerpo se incluyen pruebas de precisión, velocidad, escalada, vuelo, etc. Todo depende de la vía por la que el profesor está acostumbrado a instruir.</p>
 
 <%- include(`./partials/bot-part.html`) %>
 
