--- a/views/userlist.html
+++ b/views/userlist.html
@@ -34,7 +34,7 @@
                                 <td></td>
                             <% } %> 
                             
-                            <% if(ix["dhm"] < 14) { %>
+                            <% if(ix["dhm"] <= 10) { %>
                                 <td style="background-color:#a9d8a9"><%= ix["dhm"] %></td>
                             <% } else { %>
                                 <td style="background-color: #dac09c;"><%= ix["dhm"] %></td>
